--- a/src/components/blocks/ContactsBlock.astro
+++ b/src/components/blocks/ContactsBlock.astro
@@ -54,7 +54,7 @@ const igLink = `https://instagram.com/${cont.instagram}`;
           
           <div class="input-group">
             <label for="name">Nome o Azienda</label>
-            <input type="text" id="name" name="name" required class="premium-input" placeholder="Es. Mario Rossi" />
+            <input type="text" id="name" name="name" required class="premium-input" placeholder="Nome..." />
           </div>
 
           <div class="input-group">
